<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/babyelephant"
    tools:context=".StatisticsFragment">

    <Button
        android:id="@+id/Generate_Pie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_npie_nchart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Generate_Bar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_nbar_nchart"
        app:layout_constraintEnd_toStartOf="@+id/Generate_Radar_button"
        app:layout_constraintStart_toEndOf="@+id/Generate_Pie_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Generate_Radar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_nradar_nchart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>