<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivitiesFragment">


    <ImageButton
        android:id="@+id/shapes_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/shapes"
        app:layout_constraintBottom_toTopOf="@id/love_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <ImageButton
        android:id="@+id/numbers_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/numbers"
        app:layout_constraintBottom_toTopOf="@id/misc_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/love_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/love"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapes_button" />

    <ImageButton
        android:id="@+id/misc_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/misc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers_button" />

    <TextView
        android:id="@+id/shapesImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/shapesImageLabel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/shapes_button"
        app:layout_constraintTop_toTopOf="@+id/shapes_button" />

    <TextView
        android:id="@+id/numbersImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/numbersImageLabel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/numbers_button"
        app:layout_constraintTop_toTopOf="@+id/numbers_button" />


    <TextView
        android:id="@+id/loveImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/loveImageLabel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/love_button"
        app:layout_constraintTop_toTopOf="@+id/love_button" />



    <TextView
        android:id="@+id/miscImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/miscImageLabel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/misc_button"
        app:layout_constraintTop_toTopOf="@+id/misc_button" />














</androidx.constraintlayout.widget.ConstraintLayout>